// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSection > Should render CheckboxGroup of GenEds correctly when when matchSmallScreen=false and isExpandFilter=false 1`] = `
<CheckboxGroup
  checkboxes={[]}
  id="genEdFilter"
  log={[Function]}
  title="หมวดหมู่ GenEd"
/>
`;

exports[`FilterSection > Should render CheckboxGroup of GenEds correctly when when matchSmallScreen=false and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={[]}
  id="genEdFilter"
  log={[Function]}
  title="หมวดหมู่ GenEd"
/>
`;

exports[`FilterSection > Should render CheckboxGroup of GenEds correctly when when matchSmallScreen=true and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={[]}
  id="genEdFilter"
  log={[Function]}
  title="หมวดหมู่ GenEd"
/>
`;

exports[`FilterSection > Should render CheckboxGroup of days correctly when matchSmallScreen=false and isExpandFilter=false 1`] = `
<CheckboxGroup
  checkboxes={[]}
  id="dayOfWeekFilter"
  log={[Function]}
  title="วันในสัปดาห์"
/>
`;

exports[`FilterSection > Should render CheckboxGroup of days correctly when matchSmallScreen=false and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={[]}
  id="dayOfWeekFilter"
  log={[Function]}
  title="วันในสัปดาห์"
/>
`;

exports[`FilterSection > Should render CheckboxGroup of days correctly when matchSmallScreen=true and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={[]}
  id="dayOfWeekFilter"
  log={[Function]}
  title="วันในสัปดาห์"
/>
`;
